--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.glyptodon.guacamole</groupId>
+    <groupId>org.apache.guacamole</groupId>
     <artifactId>guacamole-auth-userfiles</artifactId>
     <packaging>jar</packaging>
-    <version>0.9.9</version>
+    <version>1.3.0</version>
     <name>guacamole-auth-userfiles</name>
     <url>http://www.mst.ch/</url>
 
@@ -25,6 +25,7 @@
                     <source>1.6</source>
                     <target>1.6</target>
                     <compilerArgs>
+                        <arg>-Xlint:-deprecation</arg>
                         <arg>-Xlint:all</arg>
                         <arg>-Werror</arg>
                     </compilerArgs>
@@ -81,26 +82,29 @@
 
         <!-- Guacamole Java API -->
         <dependency>
-            <groupId>org.glyptodon.guacamole</groupId>
+            <groupId>org.apache.guacamole</groupId>
             <artifactId>guacamole-common</artifactId>
-            <version>0.9.7</version>
+            <version>1.3.0</version>
             <scope>provided</scope>
         </dependency>
 
         <!-- Guacamole Extension API -->
         <dependency>
-            <groupId>org.glyptodon.guacamole</groupId>
+            <groupId>org.apache.guacamole</groupId>
             <artifactId>guacamole-ext</artifactId>
-            <version>0.9.9</version>
+            <version>1.3.0</version>
             <scope>provided</scope>
         </dependency>
-        
 
+
+        <!-- https://mvnrepository.com/artifact/javax.servlet/javax.servlet-api -->
         <dependency>
             <groupId>javax.servlet</groupId>
-            <artifactId>servlet-api</artifactId>
-            <version>2.5</version>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>4.0.1</version>
+            <scope>provided</scope>
         </dependency>
+
 
     </dependencies>
 
